--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0"
+        "laravelcollective/html": "^5.4.0",
+        "radic/blade-extensions": "~6.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
